--- a/float.html
+++ b/float.html
@@ -27,9 +27,7 @@
             </div>
             <div class="text">
               <div class="name">500kg摺疊式手推車(5吋輪組)</div>
-              <div class="price_qty">
-                $1200*1
-              </div>
+              <div class="price_qty">$1200*1</div>
             </div>
           </div>
           <div class="item">
@@ -38,9 +36,7 @@
             </div>
             <div class="text">
               <div class="name">500kg摺疊式手推車(5吋輪組)</div>
-              <div class="price_qty">
-                $1200*1
-              </div>
+              <div class="price_qty">$1200*1</div>
             </div>
           </div>
         </div>
@@ -111,6 +107,12 @@
             <div class="name">4/匯款後完成</div>
             <div class="desc">訂單確認無誤<br />付款後完成訂購!</div>
           </div>
+        </div>
+        <div class="payment">
+          <div class="name">匯款資料</div>
+          <div class="item"><label for="">銀行：</label>永豐銀行807</div>
+          <div class="item"><label for="">銀行帳戶：</label>105-001-0014193-9</div>
+          <div class="item"><label for="">帳戶名稱：</label>永金車輪行</div>
         </div>
         <div class="contact_btn">
           <div class="txt">- 任何疑問歡迎聯絡洽詢 -</div>
