--- a/product.html
+++ b/product.html
@@ -135,6 +135,29 @@
                   class="image"
                   style="background-image: url(./images/products/pic.png)"
                 ></div>
+                <div class="img_list">
+                  <div class="item">
+                    <a
+                      style="background-image: url(./images/products/pic.png)"
+                      data-image="./images/products/pic.png"
+                    >
+                    </a>
+                  </div>
+                  <div class="item">
+                    <a
+                      style="background-image: url(./images/products/pic02.png)"
+                      data-image="./images/products/pic02.png"
+                    >
+                    </a>
+                  </div>
+                  <div class="item">
+                    <a
+                      style="background-image: url(./images/products/pic03.png)"
+                      data-image="./images/products/pic03.png"
+                    >
+                    </a>
+                  </div>
+                </div>
               </div>
               <div class="text">
                 <div class="text_top">
@@ -144,6 +167,11 @@
                       >折疊式手推車,手把可90*折疊,輕巧易收納。面板採高級耐衝塑膠,抗腐蝕且堅固耐用,載重可達500kg,運用在各種物流搬運作業。搭配5x1.5吋台車橡膠腳輪,具有高彈性、耐磨損等特性,輕推耐用。折疊式手推車,手把可90*折疊,輕巧易收納。面板採高級耐衝塑膠,抗腐蝕且堅固耐用,載重可達500kg,運用在各種物流搬運作業。搭配5x1.5吋台車橡膠腳輪,具有高彈性、耐磨損等特性,輕推耐用。
                       折疊式手推車,手把可90*折疊,輕巧易收納。面板採高級耐衝塑膠,抗腐蝕且堅固耐用,載重可達500kg,運用在各種物流搬運作業。搭配5x1.5吋台車橡膠腳輪,具有高彈性、耐磨損等特性,輕推耐用。</span
                     >
+                  </div>
+                  <div class="select">
+                    <select name="" id="">
+                      <option value="null">請選擇品項</option>
+                    </select>
                   </div>
                 </div>
                 <div class="text_botoom">
